--- a/init.target.rc
+++ b/init.target.rc
@@ -95,3 +95,17 @@ service audiod /system/bin/audiod
 on boot
     insmod /system/lib/modules/adsprpc.ko
 
+service ppd /system/bin/mm-pp-daemon
+    class late_start
+    disabled
+    user system
+    socket pps stream 0660 system system
+    group system graphics
+
+on property:init.svc.surfaceflinger=stopped
+    stop ppd
+
+on property:init.svc.surfaceflinger=running
+    start ppd
+
+
