--- a/init.target.rc
+++ b/init.target.rc
@@ -56,6 +56,8 @@ on post-fs-data
     mkdir /tombstones/lpass 0771 system system
     mkdir /tombstones/wcnss 0771 system system
     mkdir /tombstones/dsps 0771 system system
+    mkdir /persist/data/sfs 0700 system system
+    mkdir /persist/data/tz 0700 system system
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
